# Emu-RA-Helper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: badges.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: curated.json
app/src/main/cpp/: CMakeLists.txt  rar_extract_jni.cpp
app/src/main/java/io/github/mayusi/emuhelper/: EmuHelperApplication.kt  MainActivity.kt
app/src/main/java/io/github/mayusi/emuhelper/data/config/: Catalog.kt.template  CatalogData.kt
app/src/main/java/io/github/mayusi/emuhelper/data/model/: Models.kt
app/src/main/java/io/github/mayusi/emuhelper/data/source/: AdaptiveDownloadEngine.kt  AppUpdater.kt  ArchiveOrgSource.kt  CatalogRepository.kt  DownloadManager.kt  DownloadService.kt  MirrorScheduler.kt  RarExtractor.kt  RarNative.kt  ReauthCoordinator.kt  RemoteSource.kt  SourceHealthChecker.kt  SpeedTester.kt  UpdateChecker.kt
app/src/main/java/io/github/mayusi/emuhelper/data/storage/: AuthStore.kt  CrashLogStore.kt  GameListStore.kt  HistoryStore.kt  QueueStore.kt  SettingsStore.kt
app/src/main/java/io/github/mayusi/emuhelper/di/: AppModule.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/: EmuHelperApp.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/about/: AboutScreen.kt  ErrorLogScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/browse/: ConsoleSelectScreen.kt  ConsoleSelectViewModel.kt  GamePickerScreen.kt  ScanProgressScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/common/: AppHelpers.kt  Components.kt  Dimens.kt  UpdateDialog.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/download/: DownloadPreviewScreen.kt  DownloadScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/health/: SourceHealthScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/history/: HistoryScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/home/: HomeScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/lists/: ListLibraryScreen.kt  ListViewModel.kt  SaveListScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/login/: LoginScreen.kt  SignupWebViewScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/onboarding/: CoachMarksScreen.kt  OnboardingScreen.kt  SkipExplainerScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/search/: SearchAllScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/settings/: SettingsScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/setup/: EmulatorSetupFirmwareScreen.kt  EmulatorSetupKeysScreen.kt
app/src/main/java/io/github/mayusi/emuhelper/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_bg.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/io/github/mayusi/emuhelper/data/config/: CatalogTest.kt
app/src/test/java/io/github/mayusi/emuhelper/data/model/: ModelsTest.kt
app/src/test/java/io/github/mayusi/emuhelper/data/source/: ByteCoverageTest.kt  ChunkQueueTest.kt  GlobalCapWithGovernorsTest.kt  GovernorDecisionTest.kt  HostResolutionCacheTest.kt  HostScoreboardTest.kt  IncrementalMd5Test.kt  LaneFailoverTest.kt  LanePlanningTest.kt  MirrorSchedulerTest.kt  OverProvisionBudgetTest.kt  PrewarmDecisionTest.kt  RarExtractorTest.kt  ReauthCoordinatorTest.kt  ResumeTest.kt  SoftStallDecisionTest.kt  UpdateCheckerTest.kt  WarmReuseTest.kt
app/src/test/java/io/github/mayusi/emuhelper/ui/common/: ComponentsTest.kt
app/src/test/java/io/github/mayusi/emuhelper/ui/home/: UpdateNagTest.kt
app/src/test/java/io/github/mayusi/emuhelper/ui/search/: SearchParseTest.kt
gradle/: libs.versions.toml
scripts/: README.md  release.ps1
